# mvp-1

./: .env.example  .gitignore  ARCHITECTURE.md  DATA_GENERATION_PLAN.md  DISSERTATION_SUMMARY.md  FLOW_DIAGRAMS.md  IMPLEMENTATION_ROADMAP.md  PROJECT_PLAN.md  README.md  SIMPLIFIED_FLOW_DIAGRAM.md  SIMPLIFIED_USER_FLOW.md  SYSTEM_FLOW_EXAMPLE.md  TECHNOLOGY_STACK_BY_FLOW.md  debug_output.json  pyproject.toml  requirements.txt
api/: server.py
data/: knowledge_graph.json
docs/: DATA_PRODUCT_CATALOG_PLAN.md  ML_INTEGRATION_PLAN.md  PRODUCT_ROADMAP.md  UI_VISUALIZATION_PLAN.md
output/specs/: business_metrics_summary.yaml  customer_group_metrics.yaml  daily_revenue.yaml  daily_revenue_metrics.yaml  daily_user_interaction_metrics.yaml  daily_user_metrics.yaml  product_analytics.yaml  weekly_marketing_metrics.yaml  weekly_ticket_metrics.yaml
scripts/: debug_config.py  debug_flow.py  debug_intent.py  run_pipeline.py  test_gemini.py  verify_catalog.py  verify_fixes.py  verify_ml.py  verify_ml_e2e.py  verify_use_cases.py
src/agents/: discovery_agent.py  intent_agent.py  ml_agent.py  modeling_agent.py  orchestrator.py  packaging_agent.py  quality_agent.py  transformation_agent.py
src/data_generation/: __init__.py  generate_bronze.py
src/knowledge_graph/: __init__.py  client.py  embeddings.py  populate.py  queries.py  schema.py
src/schemas/: __init__.py  data_product_schema.json  validator.py
src/services/: catalog.py
src/utils/: config.py  execution_engine.py  llm_client.py  logger.py  visualization.py
tests/: _kg_test.py
ui/: app.py
(+36 files in other folders)
